--- a/index.css
+++ b/index.css
@@ -1,64 +1,122 @@
-body {
-    font-family: arial;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+.cabecalho {
+    width: 100%;
+    height: 50px;
+    background-color: rgb(255, 255, 255);
+    position: relative;
 }
 
+.logo {
+    text-align: center;
+    position: relative;
+    
 
-@media (min-width: 768px) {
-    .container {
-        display: grid;
-        grid-template-columns: 200px 1fr 200px;
-        grid-template-rows: auto 1fr auto;
+}
 
+.central {
+
+    width: 55%;
+    height: 100vh;
+    display: inline-block;
+    text-align: center;
+    padding: 25px;
+    background-color: rgb(252, 246, 251);
+    position: relative;
+
+}
+
+.esquerda {
+    width: 20%;
+    height: 100vh;
+    float: left;
+    padding: 20px;
+    font-size: 1.5rem;
+    background-color: rgb(153, 255, 127);
+    position: relative;
+}
+
+.button {
+    border-top: 1px solid #96d1f8;
+    background: #65a9d7;
+    background: -webkit-gradient(linear, left top, left bottom, from(#000000), to(#65a9d7));
+    background: -webkit-linear-gradient(top, #000000, #65a9d7);
+    background: -moz-linear-gradient(top, #000000, #65a9d7);
+    background: -ms-linear-gradient(top, #000000, #65a9d7);
+    background: -o-linear-gradient(top, #000000, #65a9d7);
+    padding: 0px 100px;
+    -webkit-border-radius: 13px;
+    -moz-border-radius: 13px;
+    border-radius: 13px;
+    -webkit-box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
+    -moz-box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
+    box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
+    text-shadow: rgba(0, 0, 0, .4) 0 1px 0;
+    color: #ed1532;
+    font-size: 15px;
+    font-family: Georgia, serif;
+    text-decoration: none;
+    vertical-align: middle;
+}
+
+.button:hover {
+    border-top-color: #f3f3f3;
+    background: #e3fcc9;
+    color: #ccc;
+}
+
+.button:active {
+    border-top-color: #a4f70b;
+    background: #ee8d8d;
+}
+
+.direita {
+    width: 25%;
+    height: 100vh;
+    float: right;
+    background-color: blue;
+}
+
+.row::before,
+.row::after {
+    display: table;
+    content: " ";
+    clear: both;
+    line-height: 0;
+}
+
+@media (min-width: 640px) {
+
+    .col-3,
+    .col-9 {
+        float: left;
+    }
+
+    .col-3 {
+        width: 25%;
+    }
+
+    .col-9 {
+        width: 75%;
     }
 }
 
-header {
-    grid-column: span 3;
-    padding: 10px;
-    width: 100%;
-    height: 50%;
-    text-align: center;
-    font-size: 1.4em;
-    background-color: #369;
-    color: white;
-}
 
-main {
-    flex: 1;
-    padding: 30px;
-}
-
-nav {
-    display: flex;
-    background-color: #f90;
-    padding: 35px;
-    width: 40%;
-}
-
-aside {
-    display: flex;
-    padding: 35%;
-    background-color: #936;
-    width: 40%;
-}
-
-footer {
-    grid-column: span 3;
-    padding: 30px;
-    text-align: center;
-    font-size: 1.4em;
-    background-color: #690;
-    color: white;
-}
-
-h1 {
-    margin-bottom: 1em;
-    font-size: 1.3em;
-    font-weight: bold;
+.d1 {
+    text-align: right;
+    font-family: "Spartan", Sans-serif;
+    font-size: 8px;
+    font-weight: 500;
+    letter-spacing: -1.1px;
+    fill: #1D1D1D;
+    color: #1D1D1D;
+    
+   
+    
 }
